--- a/tester/Makefile
+++ b/tester/Makefile
@@ -6,7 +6,7 @@
 #    By: ycaro <ycaro@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/11/12 16:33:38 by nfour             #+#    #+#              #
-#    Updated: 2024/02/13 15:20:38 by ycaro            ###   ########.fr        #
+#    Updated: 2024/02/13 17:07:10 by ycaro            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -30,6 +30,9 @@ ${NAME}:
 		cp ../${LIB} .
 		${CC} ${MAIN} ${LIB} -o ${NAME} 
 		./${NAME}
+
+gdb:
+	gdb ${NAME}
 
 clean:
 		@${RM} ${NAME}
