do some test with gcc strlen generated version

--- a/tester/Makefile
+++ b/tester/Makefile
@@ -29,7 +29,9 @@ ${NAME}:
 		@echo " \033[5;36m ----- Compiling ${NAME} ...  ----- \033[0m"
 		cp ../${LIB} .
 		${CC} ${MAIN} ${LIB} -o ${NAME} 
-		valgrind ./${NAME}
+
+test:
+		valgrind --leak-check=full ./${NAME}
 
 gdb:
 	gdb ${NAME}
