--- a/tester/Makefile
+++ b/tester/Makefile
@@ -14,9 +14,16 @@ LIB			= 	libasm.a
 
 NAME		=	libasm_test
 
-CC			= 	gcc -g -fPIE
+NAME_WRITE		=	libasm_write_test
 
-MAIN		= 	src/test.c
+CC			= 	gcc -Wall -Wextra -Werror -g
+
+MAIN		= 	src/test.c\
+				src/test_implementation.c
+
+
+MAIN_WRITE	= 	src/test_write.c\
+				src/test_implementation.c
 
 CHECK_LIB	= 	./script/check_lib.sh
 
@@ -29,18 +36,24 @@ ${NAME}:
 		@echo " \033[5;36m ----- Compiling ${NAME} ...  ----- \033[0m"
 		cp ../${LIB} .
 		${CC} ${MAIN} ${LIB} -o ${NAME} 
+		${CC} ${MAIN_WRITE} ${LIB} -o ${NAME_WRITE} 
 
 test:
+		./${NAME} 
+		./${NAME_WRITE} 2> /dev/null
+
+testv:
 		valgrind --leak-check=full ./${NAME}
+		valgrind --leak-check=full ./${NAME_WRITE}
 
 gdb:
 	gdb ${NAME}
 
 clean:
-		@${RM} ${NAME}
+		@${RM} ${NAME} ${NAME_WRITE}
 
 fclean:	clean
-		@${RM} ${NAME} ${LIB}
+		@${RM} ${NAME} ${LIB} ${NAME_WRITE}
 
 re:		fclean all
 
