--- a/tester/Makefile
+++ b/tester/Makefile
@@ -41,18 +41,17 @@ all:	${NAME}
 
 ${NAME}:
 		./script/check_lib.sh
-		@echo " \033[5;36m ----- Compiling ${NAME} ...  ----- \033[0m"
 		@cp ../${LIB} .
 		@${CC} ${MAIN} ${LIB} -o ${NAME} 
+		@echo "\033[7;33m -----  Compiling ${NAME} done  ----- \033[0m"
 		@${CC} ${MAIN_WRITE} ${LIB} -o ${NAME_WRITE} 
-		@echo "\033[7;32m -----  Compiling ${NAME} done  ----- \033[0m"
+		@echo "\033[7;33m -----  Compiling ${NAME_WRITE} done  ----- \033[0m"
 
 ${BONUS_NAME}:
 		@./script/check_lib.sh
-		@echo " \033[5;36m ----- Compiling ${BONUS_NAME} ...  ----- \033[0m"
 		@cp ../${LIB} .
 		${CC} ${MAIN_BONUS} ${LIB} -o ${BONUS_NAME} 
-		@echo "\033[7;32m -----  Compiling ${BONUS_NAME} done  ----- \033[0m"
+		@echo "\033[7;33m -----  Compiling ${BONUS_NAME} done  ----- \033[0m"
 
 test:	${NAME}
 		@./${NAME} 
