clean valgrind tester store in file and check for invalid read/write or condiational jump

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,7 +77,7 @@
 
           "(;.*)": {
             "color": "#007f00",
-            "filterFileRegex": "\\.s",
+            "filterFileRegex": "\\.s$",
             },
     }
 }
