done atoi utils need to do check base and real atoi base function

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -79,5 +79,9 @@
             "color": "#007f00",
             "filterFileRegex": "\\.s$",
             },
-    }
+	},
+	"files.associations": {
+		"*.def": "source.def",
+		"libasm.h": "c"
+	}
 }
