--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: install valgrind
-      run: sudo apt install valgrind
+      run: sudo apt install valgrind nasm -y
 
     - name: make all valgrind test
       run: make av
